2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnusers.xml: Remove the screenshot TODO improvement 
	text from the gedit section. We obviously will not get around to 
	doing that.
	eog: Mention new changed image collection pane buttons.
	* docbook/C/figures: Updated the eog screenshot, for the changed UI.
	Added an epiphany screenshot from Reinout, and used it in the 
	markup.

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rni18n.xml: Updated with the list from 2.16, which 
	is more likely to contain more useful text. Danilo will update 
	this soon for 2.20. Note that we abandonded the (bikesheddable) 
	numbers of speakers of languages in 2.16. There was no list 
	in the 2.18 notes. 

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rndevelopers.xml: Removed more empty link tags.
	* docbook/C/figures/rnusers-seahorse-encrypt-multiple-files.png: 
	Recreated with the new clearlooks themes.

2007-09-03  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnadmins.xml:
	* docbook/Makefile_shared.am_fragment: Added a sabayon 
	screenshot and explained what is new.

2007-09-03  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Added an extra introductory 
	paragraph listing the big changes, press-release style.
	* docbook/Makefile_shared.am_fragment: 
	* docbook/C/rnusers.xml:
	Added a screenshot of GNOME in arabic.
	Removed some useless links.

2007-09-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* docbook/th/th.po: Updated Thai translation.

2007-09-02  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rninstallation.xml: Updated with the jhbuild list 
	command.
	* docbook/C/rndevelopers.xml:
	* docbook/C/rnlookingforward.xml:
	* docbook/C/rnusers.xml: Corrected some typos, thanks to 
	Priit Laes.

2007-09-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* docbook/es/es.po: updated spanish translation

2007-09-02  Daniel Nylander <po@danielnylander.se>
