@@ -38,7 +38,7 @@
 	<para>
 		For those who really want to compile the entire desktop by hand, the order
 		to compile the modules in is: 
-		libxml2, libgpg-error, libgcrypt, libxslt, gnome-common, intltool, rarian, gtk-doc, glib, libIDL, ORBit2, fontconfig, cairo, pango, gnome-doc-utils, atk, shared-mime-info, gtk+, gconf, libbonobo, gail, at-spi, gnome-mime-data, desktop-file-utils, libdaemon, dbus, dbus-glib, dbus-python, pygobject, pycairo, libglade, pygtk, avahi, libvolume_id, hal, gamin, gnome-vfs, audiofile, esound, libart_lgpl, libgnome, libgnomecanvas, libbonoboui, hicolor-icon-theme, icon-naming-utils, gnome-icon-theme, gnome-keyring, libgnomeui, meta-gnome-devel-platform-upcoming-deprecations, meta-gnome-devel-platform, gnome-menus, alacarte, libtasn1, opencdk, gnutls, libsoup, mozilla, evolution-data-server, libgtop, startup-notification, gtk-engines, gnome-themes, gnome-desktop, bug-buddy, metacity, libgsf, libcroco, libgnomecups, libgnomeprint, libgnomeprintui, librsvg, eel, nautilus, libxklavier, libgnomekbd, gstreamer, liboil, gst-plugins-base, libwnck, gnome-panel, gnome-control-center, gnome-speech, dasher, pyorbit, gnome-python, gtksourceview-1.0, nautilus-cd-burner, gst-plugins-good, libmusicbrainz, iso-codes, totem, gnome-media, gnome-python-desktop, deskbar-applet, pwlib, opal, ekiga, eog, enchant, epiphany, poppler, evince, gtkhtml, evolution, evolution-exchange, evolution-webcal, fast-user-switch-applet, file-roller, gcalctool, gconf-editor, gdm2, gtksourceview, pygtksourceview, gedit, gucharmap, system-tools-backends, gnome-applets, gnome-backgrounds, gnome-games, gnome-keyring-manager, gnome-netstatus, gnome-nettool, libcolorblind, gnome-mag, gnome-power-manager, gnome-screensaver, gnome-session, libsigc++2, glibmm, cairomm, gtkmm, gnome-system-monitor, liboobs, gnome-system-tools, vte, gnome-terminal, gnome-user-docs, gnome-utils, gnome-volume-manager, gok, libgail-gnome, orca, seahorse, sound-juicer, tomboy, vino, yelp, zenity, meta-gnome-desktop-upcoming-deprecations, meta-gnome-desktop-suite, pessulus, sabayon, meta-gnome-admin, devhelp, glade3, accerciser, gnome-devel-docs, meta-gnome-devtools-suite, meta-gnome-desktop.
+		libxml2, libgpg-error, libgcrypt, libxslt, gnome-common, intltool, rarian, gtk-doc, glib, libIDL, ORBit2, fontconfig, cairo, pango, gnome-doc-utils, atk, shared-mime-info, gtk+, gconf, libbonobo, gail, at-spi, gnome-mime-data, desktop-file-utils, libdaemon, dbus, dbus-glib, dbus-python, pygobject, pycairo, libglade, pygtk, avahi, libvolume_id, hal, gamin, gnome-vfs, audiofile, esound, libart_lgpl, libgnome, libgnomecanvas, libbonoboui, hicolor-icon-theme, icon-naming-utils, gnome-icon-theme, gnome-keyring, libgnomeui, gnome-menus, alacarte, libtasn1, opencdk, gnutls, libsoup, mozilla, evolution-data-server, libgtop, startup-notification, gtk-engines, gnome-themes, gnome-desktop, bug-buddy, metacity, libgsf, libcroco, libgnomecups, libgnomeprint, libgnomeprintui, librsvg, eel, nautilus, libxklavier, libgnomekbd, gstreamer, liboil, gst-plugins-base, libwnck, gnome-panel, gnome-control-center, gnome-speech, dasher, pyorbit, gnome-python, gtksourceview-1.0, nautilus-cd-burner, gst-plugins-good, libmusicbrainz, iso-codes, totem, gnome-media, gnome-python-desktop, deskbar-applet, pwlib, opal, ekiga, eog, enchant, epiphany, poppler, evince, gtkhtml, evolution, evolution-exchange, evolution-webcal, fast-user-switch-applet, file-roller, gcalctool, gconf-editor, gdm2, gtksourceview, pygtksourceview, gedit, gucharmap, system-tools-backends, gnome-applets, gnome-backgrounds, gnome-games, gnome-keyring-manager, gnome-netstatus, gnome-nettool, libcolorblind, gnome-mag, gnome-power-manager, gnome-screensaver, gnome-session, libsigc++2, glibmm, cairomm, gtkmm, gnome-system-monitor, liboobs, gnome-system-tools, vte, gnome-terminal, gnome-user-docs, gnome-utils, gnome-volume-manager, gok, libgail-gnome, orca, seahorse, sound-juicer, tomboy, vino, yelp, zenity, pessulus, sabayon, devhelp, glade3, accerciser, gnome-devel-docs
 	</para>
 	<note><para>
 		This list is provided purely for reference and we strongly urge anyone
