@@ -1,5 +1,12 @@
 2007-09-05  Murray Cumming  <murrayc@murrayc.com>
 
+	* Makefile.am: Removed the images/ stuff. There is no such 
+	directory.
+	* docbook/C/rninstallation.xml: Removed the meta-packages from 
+	the list.
+
+2007-09-05  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/rnusers.xml: Remove the screenshot TODO improvement 
 	text from the gedit section. We obviously will not get around to 
 	doing that.
